[tool.poetry]
name = "seven-degrees-of-torvalds"
version = "0.1.0"
description = ""
authors = ["tobiadefami <tobiadefami@gmail.com>"]
readme = "README.md"
packages = [{include = "sixdegrees"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
starlette = "^0.37.2"
fastapi = "^0.111.0"
aiohttp = "^3.9.5"
sqlitedict = "^2.1.0"
itsdangerous = "^2.2.0"
fastapi-sessions = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
