[tool.poetry]
name = "sixdegrees"
version = "0.1.0"
description = "Creating developer connetions to Linus Torvalds using Github commit history."
authors = ["tobiadefami <tobiadefami@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
requests = "^2.32.3"
starlette = "^0.37.2"
sqlitedict = "^2.1.0"
aiohttp = "^3.9.5"
itsdangerous = "^2.2.0"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
